# legal_24_nums

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: legal_24_benchmark.rs
src/: lib.rs  main.rs
