[package]
name = "legal_24_nums"
version = "0.3.0"
edition = "2024"
author = "coderjs54"
default-run = "legal_24_nums"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1.12.0"
serde_json = "1.0.149"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "legal_24_benchmark"
harness = false
